--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
   <h1 id="title">Drum 🥁 Kit</h1>
+  <h2>Aji Lund Mera</h2>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
